# butterscotch

./: .gitignore  Cargo.toml  GNUmakefile  README.md  builder.py  limine.cfg  makesysroot.sh
.cargo/: config.toml
builder/: __init__.py  build.py  clean.py  external_resources.py  img.py  system.py
driver_tester/: Cargo.toml  README.md
driver_tester/src/: fat32.rs  main.rs
kernel/: .gitignore  Cargo.toml  GNUmakefile
kernel/.cargo/: config.toml
kernel/core/src/: kernel.rs  memory.rs
kernel/core/src/fs/: mod.rs  ramfs.rs
kernel/core/src/io/: console.rs
kernel/fat32/: Cargo.toml
kernel/fat32/src/: lib.rs
kernel/libk/: Cargo.toml
kernel/libk/src/: utils.rs
kernel/libk/src/io/: block.rs  disk.rs  mod.rs  ramfile.rs
kernel/src/: allocator.rs  constants.rs  gdt.rs  interrupt.rs  kernel.rs  kernel_allocator.rs  lib.rs  limine_requests.rs  main.rs  memory.rs  shell.rs
kernel/src/fs/: mod.rs  ramfs.rs
kernel/src/io/: console.rs  framebuffer.rs  mod.rs  serial.rs  stdin.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
libk/: Cargo.toml
libk/src/: hlt.rs  lib.rs  utils.rs
libk/src/io/: mod.rs  stderr.rs  stdin.rs  stdout.rs
src/: allocator.rs  interrupt.rs  kernel.rs  lib.rs  main.rs  memory.rs  vga_text_buffer.rs
src/io/: console.rs  mod.rs  serial.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs
