[package]
name = "butterscotch_kernel"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300

[dependencies]
# Older verson, as the framebuffer refuses to work on latest one
bootloader = "0.9.8"
spin = "0.9.8"
uart_16550 = "0.3.0"
x86_64 = "0.14.11"
